# copilot-agent-modes

./: .gitignore  README.md  pyproject.toml
.claude/agents/: documenter.md
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  debugger.agent.md  evaluator.agent.md  execution.agent.md  exploration.agent.md  thinker.agent.md
.github/instructions/: azureml.instructions.md  docker.instructions.md  python.instructions.md  tests.instructions.md
.github/prompts/: README.md  architect.prompt.md  bootstrap.prompt.md  debugger.prompt.md  documenter.prompt.md  evaluator.prompt.md  execution.prompt.md  exploration.prompt.md  new-adopter.prompt.md  template-contributor.prompt.md  thinker.prompt.md
.github/workflows/: test.yml
docs/: deep_research.md  delegation-model.md  email-draft.md  problem_statement.md
docs/design/: agent-skills-design.md  skills-phase1-contract.md  vscode-copilot-2026-update-suggestions.md
examples/guardrails/: README.md  challenger.agent.template.md  prompt-wiring-examples.md
examples/instructions/: README.md  api.instructions.md  evidence-grounding.instructions.md  ingestion.instructions.md  project-spec.instructions.md  (+2 more)
pipeline/: LICENSE  README.md  pipeline.yml  pyproject.toml
pipeline/data/: MLTable  sample_dispatch.csv
pipeline/environment/: Dockerfile  requirements.txt  validate.sh
pipeline/src/: entry_script.py
pipeline/tests/: test_entry_script.py  test_mltable.py  test_pipeline_yaml.py
project-spec/: README.md  constraints.md  infrastructure.md  interfaces.md  project.md  todos.md
(+28 files in other folders)
